<resources>
    <string name="app_name">Calendula</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="preference">Preference</string>
    <string name="appearance">Appearance</string>
    <string name="theme">Theme</string>
    <string name="theme_choose">Choose your theme preference</string>
    <string name="theme_light">Light theme</string>
    <string name="theme_dark">Dark theme</string>
    <string name="theme_device">Device theme</string>
    <string name="add_button">Add</string>
    <string name="todo">Need to do...</string>
    <string name="text_note">Description...</string>
    <string name="once">Once</string>
    <string name="weekly">Weekly</string>
    <string name="on_even_weeks">On even weeks</string>
    <string name="on_odd_weeks">On odd weeks</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="repeat">Repeat</string>
    <string name="tag_work">Work</string>
    <string name="tag_study">Study</string>
    <string name="tag_leisure">Leisure</string>
    <string name="tag_home">Home</string>
    <string name="tag_health">Health</string>
    <string name="tag_friends">Friends</string>
    <string name="tag_sport">Sport</string>
    <string name="tag_family">Family</string>
    <string name="add_tag">Add tag</string>
    <string name="empty_error">Title field cannot be empty</string>
    <string name="tags">Tags</string>
    <string name="delete_confirm">Are you sure you want to delete</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="drag">Drag</string>
    <string name="empty_time" translatable="false">--:--</string>
    <string name="plus" translatable="false">+</string>
    <string name="add">Add</string>
    <string name="today">Сегодня</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
</resources>