<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="17dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="17dp">

        <ImageView
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_ok"
            app:tint="?attr/colorSecondary"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/ok" />

        <ImageView
            android:id="@+id/drag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_drag"
            android:layout_toStartOf="@+id/button_ok"
            android:layout_toEndOf="@+id/button_cancel"
            android:contentDescription="@string/drag" />

        <ImageView
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_cancel"
            app:tint="?attr/colorSecondary"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/cancel" />


    </RelativeLayout>

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="17dp"
        android:backgroundTint="?attr/colorSecondary"
        android:drawableEnd="@drawable/ic_name"
        android:drawableTint="?attr/colorSecondary"
        android:hint="@string/todo"
        android:maxLength="100"
        android:singleLine="true"
        android:textColor="?attr/colorSecondary"
        android:textColorHint="?attr/colorOnSecondary"
        android:textCursorDrawable="@drawable/color_selector_cursor"
        android:textSize="17sp"
        tools:ignore="Autofill,TextFields,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="17dp"
        android:backgroundTint="?attr/colorSecondary"
        android:clickable="true"
        android:drawableEnd="@drawable/ic_date"
        android:drawableTint="?attr/colorSecondary"
        android:focusable="false"
        android:inputType="date"
        android:textColor="?attr/colorSecondary"
        android:textSize="17sp"
        tools:ignore="Autofill,KeyboardInaccessibleWidget,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editRepeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="17dp"
        android:backgroundTint="?attr/colorSecondary"
        android:clickable="true"
        android:drawableEnd="@drawable/ic_repeat"
        android:drawableTint="?attr/colorSecondary"
        android:focusable="false"
        android:inputType="none"
        android:text="@string/once"
        android:textColor="?attr/colorSecondary"
        android:textSize="17sp"
        tools:ignore="Autofill,KeyboardInaccessibleWidget,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="17dp"
        android:backgroundTint="?attr/colorSecondary"
        android:clickable="true"
        android:drawableEnd="@drawable/ic_time"
        android:drawableTint="?attr/colorSecondary"
        android:focusable="false"
        android:inputType="date"
        android:text="@string/empty_time"
        android:textColor="?attr/colorSecondary"
        android:textSize="17sp"
        tools:ignore="Autofill,KeyboardInaccessibleWidget,TouchTargetSizeCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="17dp"
        android:textSize="17sp"
        android:textColor="?attr/colorSecondary"
        android:text="@string/tags"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="17dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tag1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/tag2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/tag3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/button_tag_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:textColor="?attr/colorSecondary"
            android:textSize="12sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/editTextNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="?attr/colorSecondary"
        android:drawableEnd="@drawable/ic_text_note"
        android:drawableTint="?attr/colorSecondary"
        android:hint="@string/text_note"
        android:maxLength="100"
        android:textColor="?attr/colorSecondary"
        android:textColorHint="?attr/colorOnSecondary"
        android:textCursorDrawable="@drawable/color_selector_cursor"
        android:textSize="17sp"
        tools:ignore="Autofill,TextFields,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_delete"
        app:tint="?attr/colorSecondary"
        android:contentDescription="@string/delete" />

</LinearLayout>